<resources>
    <string name="app_name">BookWithStar</string>
    <string name="background_image">Background</string>
    <string name="app_logo">App logo</string>
    <string name="log_in_msg">Log In to continue</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log in</string>
    <string name="log_in_u"><u>Log in</u></string>
    <string name="new_here">New here?</string>
    <string name="sign_up"> <b><u>Sign Up</u></b></string>
    <string name="get_started">Get Started!</string>
    <string name="already_have_an_account">Already have an account? </string>
    <string name="fill_reg">Fill in all fields to complete your registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="num_placeholder">00971 00 0000000</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="policy_text">By creating your account, you agree to our Terms of Service and Privacy Policy</string>
    <string name="back">Back</string>
    <string name="reset_password_prompt">Enter your email address to reset password</string>
    <string name="reset_password">Reset Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="welcome_placeholder">Welcome, %s !</string>
    <string name="Pricing_modifier">AED %.1f / %s</string>
    <string name="Pricing_modifier_2">%s AED</string>
    <string name="full_name_join">%s %s</string>
    <string name="email_address">Email Address</string>
    <string name="country">Country</string>
    <string name="update">Update</string>
    <string name="display_name">Display Name</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="find_venue">Find Venue</string>
    <string name="book_online">Book Online</string>
    <string name="book_class">Book Class</string>
    <string name="find_class">Find Class</string>
    <string name="find_teammates">Find Teammates</string>
    <string name="my_bookings">My Bookings</string>
    <string name="notifications">Notifications</string>
    <string name="about">About</string>
    <string name="offers">Offers</string>
    <string name="contact_us">Contact Us</string>
    <string name="delete_account">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="name_placeholder">Ibrahim Tariq</string>
    <string name="reward_points">Reward Points:</string>
    <string name="_0">0</string>
    <string name="find_your_sports">Find your sports</string>
    <string name="moto">Be it a pro or an amateur, explore a range of sports and activities you can play with us and our partners.</string>
    <string name="featured_venues">Featured Venues</string>
    <string name="featured_classes">Featured Classes</string>
    <string name="reward_description"><![CDATA[The more you play, the more you earn. Play & earn points. For every pitch or a class you book via Book With Star, we will give you extra points, fully redeemable at all venues.]]></string>
    <string name="reward_points_title">Reward\nPoints</string>
    <string name="book_my_venue">Book My\nVenue</string>
    <string name="book_my_class">Book My\nClass</string>
    <string name="activate_my_profile">Activate My\nProfile</string>
    <string name="book_venue_description">Our online booking system allows you to easily search for available sports facilities and pitches by date, time and location. With a click-of a button, you ca easily book and pay online.</string>
    <string name="book_class_description">from football to basket ball, cricket, tennis to badminton, we have a great selection of sports facilities and pitches across Dubai and Sharjah, catering for a wide range of sports.</string>
    <string name="profile_description">And in case you need extra players, we\'ve got you covered. Our \"Find My Team\" feature allows you to build your own profile and find and connect with like-minded recreational players instantly.</string>
    <string name="select_sports">Select Sports</string>
    <string name="select_sport_type">Select Sport Type</string>
    <string name="bronze">Bronze</string>
    <string name="price">AED 350.00 / 4 weeks</string>
    <string name="screen_background">Screen Background</string>
    <string name="log_in_to_continue">Log In to continue</string>
    <string name="forget_password">Forget Password?</string>
    <string name="new_on_here">New on here?</string>
    <string name="already_account">Already have an account?</string>
    <string name="sign_in"><u>Log In</u></string>
    <string name="fill">Fill in all filed to complete your registration.</string>
    <string name="ph_number">00971 00 0000000</string>
    <string name="enter_password">Enter Password</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="by_creating">By creating your account, check our</string>
    <string name="email_add">someone@example.com</string>
    <string name="full_name">Name Surname</string>
    <string name="welcome">Welcome,</string>
    <string name="name_surname">Name Surname !</string>
    <string name="venue_image">Venue Image</string>
    <string name="al_arqam_private_school">Brampton Sports Academy</string>
    <string name="dubai">Dubai</string>
    <string name="distance">Distance: 0.0 Km</string>
    <string name="details">Details</string>
    <string name="book_now">Book Now</string>
    <string name="book_now_to">Book now to reserve your spot and don\'t miss out</string>
    <string name="select_location">Select Location</string>
    <string name="search">Search</string>
    <string name="please_enter_email">Please enter your Email or Phone Number</string>
    <string name="email_phone">Email Address / Phone Number</string>
    <string name="no_discount">No Discount</string>
    <string name="sessions">4 sessions</string>
    <string name="enable_player_finder">Enable Player Finder</string>
    <string name="name">Name</string>
    <string name="message_now">Message Now</string>
    <string name="player_interest">Player Interest</string>
    <string name="individual_or_team">Individual or Team</string>
    <string name="select_availability">Select Availability</string>
    <string name="please_select">Please Select</string>
    <string name="age_should_be">Age should be</string>
    <string name="select_skills">Select Skills</string>
    <string name="select_gender">Select Gender</string>
    <string name="preferred_venue">Preferred Venue</string>
    <string name="select_venue">Select Venue</string>
    <string name="player_location">Player Location</string>
    <string name="describe_yourself">Describe Yourself</string>
    <string name="update_player">Update Player</string>
    <string name="expiry_date">Expiry Date: 2022–12–31</string>
    <string name="date_placeholder">2022–12–31</string>
    <string name="choose_offer">Choose the best offer! Whatever you want</string>
    <string name="pro_or_amateur">Be it a pro or an amateur, explore a range of sports you can play with us and our partners</string>
    <string name="featured_venue">Featured Venue</string>
    <string name="discount_placeholder">75m</string>
    <string name="image_of_location">image of location</string>
    <string name="proceed">Proceed</string>
    <string name="days">Days</string>
    <string name="time">Time</string>
    <string name="schedule_name">Schedule Name</string>
    <string name="time_placeholder">5:00–6:00pm</string>
    <string name="schedule_placeholder">players 6–9 years old</string>
    <string name="day_placeholder">TUESDAY</string>
    <string name="heading_placeholder">Heading</string>
    <string name="filter">Filter</string>
    <string name="choose_frequency">Choose Frequency</string>
    <string name="let_s_talk_let_s_play">Let\'s Talk. Let\'s Play.</string>
    <string name="looking_for_the_best_sports_pitch_or_venue_in_dubai_get_in_touch_with_bookwithstar_com">Looking for the best sports pitch or venue in Dubai? Get in touch with bookwithstar.com</string>
    <string name="send">Send</string>
    <string name="type_your_message">Type Your Message</string>
    <string name="filter_result">Filter Result</string>
    <string name="select">Select</string>
    <string name="preferred_venue_to_play">Preferred venue to play</string>
    <string name="booking_moto">Are you looking to find the best package for training?</string>
    <string name="price_placeholder">AED 100</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Date</string>
    <string name="in_cart">In Cart</string>
    <string name="booked">Booked</string>
    <string name="not_available">UnAvailable</string>
    <string name="group">Group</string>
    <string name="reserved">Reserved</string>
    <string name="court_name">Court Name</string>
    <string name="checkout">Checkout</string>
    <string name="total_0">Total: %s</string>
    <string name="added_slots">Added Slots</string>
    <string name="redeem_coupon">Redeem Coupon</string>
    <string name="addons">Addons</string>
</resources>