<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />

        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/findVenueFragment"
            android:icon="@drawable/ic_menu_find_venue"
            android:title="@string/find_venue" />

        <item
            android:id="@+id/bookOnlineFragment"
            android:icon="@drawable/ic_menu_book_online"
            android:title="@string/book_online" />

        <item
            android:id="@+id/findClassFragment"
            android:icon="@drawable/ic_menu_find_class"
            android:title="@string/find_class" />

        <item
            android:id="@+id/bookClassFragment"
            android:icon="@drawable/ic_menu_book_online"
            android:title="@string/book_class" />

        <item
            android:id="@+id/findTeammatesFragment"
            android:icon="@drawable/ic_menu_find_teammate"
            android:title="@string/find_teammates" />

        <item
            android:id="@+id/myBookingsFragment"
            android:icon="@drawable/ic_menu_book_online"
            android:title="@string/my_bookings" />

        <item
            android:id="@+id/notificationsFragment"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/notifications" />

        <item
            android:id="@+id/offersFragment"
            android:icon="@drawable/ic_menu_offer"
            android:title="@string/offers" />

        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/about" />

        <item
            android:id="@+id/contactUsFragment"
            android:icon="@drawable/ic_menu_contact"
            android:title="@string/contact_us" />

        <item
            android:id="@+id/nav_delete_account"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/delete_account" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/logout" />
    </group>
</menu>